--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 python-json-pointer (1.0-2) UNRELEASED; urgency=low
 
   * Ran wrap-and-sort.
+  * Adds support for python3.
+  * Adds Ubuntu patch for utf-8 in setup.py fixing FTBFS.
+  * Adds README.md in the doc folders.
+  * Cleans correctly (allow to build twice).
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 30 May 2013 14:02:39 +0800
 
