* Added dh-python in build-depends, removed versions for python-all and     python3-all.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ python-json-pointer (1.9-2) unstable; urgency=medium
 
   * Uploading to unstable.
   * Standards-Version is now 3.9.6.
+  * Added dh-python in build-depends, removed versions for python-all and
+    python3-all.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 16 Oct 2015 09:55:07 +0000
 
