--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-json-pointer (1.9-3) unstable; urgency=medium
+
+  * override_dh_python3 to fix Py3 shebang.
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 23 Oct 2015 22:38:57 +0000
+
 python-json-pointer (1.9-2) unstable; urgency=medium
 
   * Uploading to unstable.
