--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-json-pointer (1.9-4) UNRELEASED; urgency=medium
+
+  * Fixed VCS URLs (https).
+
+ -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:40:14 +0100
+
 python-json-pointer (1.9-3) unstable; urgency=medium
 
   * override_dh_python3 to fix Py3 shebang.
