--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-python-json-pointer (1.9-4) UNRELEASED; urgency=medium
+python-json-pointer (1.10-1) UNRELEASED; urgency=medium
 
+  * New upstream release.
   * Fixed VCS URLs (https).
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:40:14 +0100
