--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ python-json-pointer (1.10-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Fixed VCS URLs (https).
+  * Added simple Debian tests.
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:40:14 +0100
 
