--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ python-json-pointer (1.10-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Fixed VCS URLs (https).
   * Added simple Debian tests.
+  * Standards-Version bumped to 3.9.8 (no changes needed)
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:40:14 +0100
 
