--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,9 @@ python-json-pointer (1.10-1) UNRELEASED; urgency=medium
   * Fixed VCS URLs (https).
   * Added simple Debian tests.
   * Standards-Version bumped to 3.9.8 (no changes needed)
-  * d/copyright: Fixed order
+  * d/copyright
+    - Fixed order
+    - Added myself to Debian part
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:40:14 +0100
 
