--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-json-pointer (1.10-2) UNRELEASED; urgency=medium
+
+  * d/rules: Changed UPSTREAM_GIT protocol to https
+
+ -- Ondřej Nový <novy@ondrej.org>  Thu, 19 May 2016 21:18:08 +0200
+
 python-json-pointer (1.10-1) unstable; urgency=medium
 
   * Team upload.
