--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-json-pointer (1.10-2) UNRELEASED; urgency=medium
 
   * d/rules: Changed UPSTREAM_GIT protocol to https
+  * d/copyright: Changed source URL to https protocol
 
  -- Ondřej Nový <novy@ondrej.org>  Thu, 19 May 2016 21:18:08 +0200
 
