--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ python-json-pointer (1.10-2) UNRELEASED; urgency=medium
 
   * d/rules: Changed UPSTREAM_GIT protocol to https
   * d/copyright: Changed source URL to https protocol
+  * d/s/options: extend-diff-ignore of .gitreview
+  * d/control: Using OpenStack's Gerrit as VCS URLs.
 
  -- Ondřej Nový <novy@ondrej.org>  Thu, 19 May 2016 21:18:08 +0200
 
