--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-json-pointer (1.10-2) UNRELEASED; urgency=medium
+python-json-pointer (1.10-2) unstable; urgency=medium
 
   * d/rules: Changed UPSTREAM_GIT protocol to https
   * d/copyright: Changed source URL to https protocol
