--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-json-pointer (1.10-3) UNRELEASED; urgency=medium
+
+  * Bumped debhelper compat version to 10
+
+ -- Ondřej Nový <onovy@debian.org>  Thu, 24 Nov 2016 00:06:52 +0100
+
 python-json-pointer (1.10-2) unstable; urgency=medium
 
   * d/rules: Changed UPSTREAM_GIT protocol to https
